--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -10,9 +10,9 @@ name: OpenWrt-CI
 on:
   schedule:
     - cron: 0 20 * * *
-  #push: 
-    #branches: 
-      #- master
+  push: 
+    branches: 
+      - master
   release:
     types: [published]
     
@@ -60,6 +60,11 @@ jobs:
           ./scripts/feeds install -a
 
       - name: Generate configuration file
+          cat >> .config <<EOF
+          CONFIG_PACKAGE_kmod-mt7915e=y
+          CONFIG_PACKAGE_luci-app-easymesh=y
+          EOF
+        
         run: make defconfig
 
       - name: Make download
